<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TVMiracast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="Start">Start</string>
	<string name="Stop">Stop</string>
	<string name="PubEvent">PubEvent</string>
	<string name="Connect">Connect</string>
	<string name="Disconnect">Disconnect</string>
	<string name="Send">Send</string>

</resources>